remove JDKUtils.LANG_UNNAMED